feat: add proxy support
