# docs/swagger.json
@@ -438,12 +438,31 @@
                   },
                   "waitQrCode": {
                     "type": "boolean"
+                  },
+                  "proxy": {
+                    "type": "object",
+                    "properties": {
+                      "url": {
+                        "type": "string"
+                      },
+                      "username": {
+                        "type": "string"
+                      },
+                      "password": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "webhook": "",
-                "waitQrCode": false
+                "waitQrCode": false,
+                "proxy": {
+                  "url": "http://myproxy.com:8080",
+                  "username": "myuser",
+                  "password": "mypassword"
+                }
               }
             }
           }
